sumo/tests/sumo/errors/routes/disconnected_off/errors.sumo
Warning: Teleporting vehicle '0'; waited too long, lane='beg_0', time=332.00.
Warning: Vehicle '0' ends teleporting on edge 'end', simulation time 332.00.
